[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "warehouse-fleet-management"
version = "1.0.0"
description = "Warehouse Fleet Management Environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.1",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.4",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
